# hackathon-miami-harvverse-sol

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  LOCAL-DEV.md  README.md  codama.json  debug-pda.js  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.kiro/skills/solana-dev/: SKILL.md
.kiro/specs/solana-mobile-app/: .config.kiro  design.md  requirements.md  tasks.md
apps/native/: README.md  app.json  package.json  tsconfig.json
apps/native/android/: settings.gradle
apps/native/app/: _layout.tsx  connect-wallet.tsx  index.tsx  role-select.tsx
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/app/: page.tsx  (+1 more)
plans/: gaps.md  product-tech-design.md
programs/anchor/: Anchor.toml  README.md  package.json  tsconfig.json
programs/anchor/programs/harvverse/: Cargo.toml
programs/anchor/programs/harvverse/src/: errors.rs  events.rs  lib.rs
programs/anchor/programs/harvverse/src/instructions/: claim_mock_usdc.rs  create_farmer_profile.rs  create_lot.rs  create_partner_profile.rs  initialize_config.rs  initialize_mock_usdc.rs  mod.rs  publish_lot.rs  record_milestone.rs  record_settlement.rs  register_role.rs  release_kickoff_funds.rs  release_milestone_funds.rs  reserve_partnership.rs  update_lot_hashes.rs
programs/anchor/programs/harvverse/src/state/: farmer_profile.rs  lot.rs  milestone_receipt.rs  mod.rs  partner_profile.rs  partnership.rs  partnership_escrow.rs  payment_config.rs  program_config.rs  settlement_receipt.rs  user_role.rs
scripts/: localnet-airdrop.mjs  localnet-dev.mjs
(+135 files in other folders)
