[package]
name = "harvverse"
version = "0.1.0"
description = "Harvverse Solana program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "harvverse"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
